support delete multiple accidents
